[PerformanceTimeline] Support paint entries for performance.getEntriesByName

performance.GetEntriesByName should support retrieving entries of 'first-paint' and
'first-contentful-paint' by their name. This CL is to enable such
behavior which returns an entryList containing the entry in both cases, as follows:

performance.getEntriesByName("first-paint")
performance.getEntriesByName("first-contentful-paint")

Bug: 770777
Change-Id: I9be4e8b7ce21e680ca9509619d331a6a8fac6369
Reviewed-on: https://chromium-review.googlesource.com/735843
Reviewed-by: Shubhie Panicker <panicker@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Liquan Gu <maxlg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514177}
Former-commit-id: cb9a570f32aece6f8be504e9fac441369ad4a9ba